--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,18 @@
-aiofiles==23.2.1
-annotated-types==0.6.0
-anyio==4.3.0
-asttokens==2.4.1
-bcrypt==4.1.2
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
+alembic==1.13.1
+blinker==1.8.2
 click==8.1.7
 colorama==0.4.6
-cryptography==42.0.3
-debugpy==1.8.1
-decorator==5.1.1
-docutils==0.21.2
-ecdsa==0.18.0
-executing==2.0.1
-fastapi==0.109.2
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.3
-httpx==0.26.0
-idna==3.6
-iniconfig==2.0.0
-Jinja2==3.1.3
-jupyter_core==5.7.1
-Kivy==2.3.0
-kivy-deps.angle==0.4.0
-kivy-deps.glew==0.3.1
-kivy-deps.sdl2==0.7.0
-Kivy-Garden==0.1.5
-lxml==5.2.2
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Mako==1.3.5
 MarkupSafe==2.1.5
-matplotlib-inline==0.1.6
-nest-asyncio==1.6.0
-numpy==1.26.4
-packaging==23.2
-parso==0.8.3
-passlib==1.7.4
-platformdirs==4.2.0
-pluggy==1.4.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
-psycopg2-binary==2.9.9
-pure-eval==0.2.2
-pyasn1==0.5.1
-pycparser==2.21
-pydantic==2.6.1
-pydantic_core==2.16.2
-Pygments==2.17.2
-PyMySQL==1.1.0
-pypiwin32==223
-pytest==8.0.1
-pytest-asyncio==0.23.5
-python-dateutil==2.8.2
-python-docx==1.1.2
-python-jose==3.3.0
-python-multipart==0.0.9
-pywin32==306
-pyzmq==25.1.2
-requests==2.31.0
-rsa==4.9
-six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==2.0.27
-stack-data==0.6.3
-starlette==0.36.3
-tornado==6.4
-traitlets==5.14.1
-typing_extensions==4.9.0
-urllib3==2.2.1
-uvicorn==0.27.1
-wcwidth==0.2.13
+SQLAlchemy==2.0.30
+typing_extensions==4.12.2
+Werkzeug==3.0.3
+zipp==3.19.2
